--- a/projects/angular/src/forms/styles/_textarea.clarity.scss
+++ b/projects/angular/src/forms/styles/_textarea.clarity.scss
@@ -27,15 +27,16 @@
   .clr-textarea {
     max-width: calc(100% - #{forms-variables.$clr-forms-baseline});
     height: auto;
-
     resize: vertical;
+    border: variables.$clr-global-borderwidth solid;
+    font-size: forms-variables.$clr-forms-field-font-size;
+
     @include mixins.css-var(
       background,
       clr-forms-textarea-background-color,
       forms-variables.$clr-forms-textarea-background-color,
       variables.$clr-use-custom-properties
     );
-    border: variables.$clr-global-borderwidth solid;
     @include mixins.css-var(
       border-color,
       clr-forms-border-color,
@@ -61,12 +62,22 @@
       variables.$clr-use-custom-properties
     );
 
-    font-size: forms-variables.$clr-forms-field-font-size;
-
     &:focus {
+      // TODO(CDE-863) - Remove outline mixin and convert this component to just use border-color to avoid the white
+      // outline in addition to the intended color on focus
       @include mixins.include-slim-outline-style-form-fields();
-      //background-color: var(--clr-forms-textarea-focus-background);
-      outline-color: var(--clr-forms-textarea-focus-outline);
+      @include mixins.css-var(
+        outline-color,
+        clr-forms-focused-color,
+        forms-variables.$clr-forms-focused-color,
+        variables.$clr-use-custom-properties
+      );
+      @include mixins.css-var(
+        border-color,
+        clr-forms-focused-color,
+        forms-variables.$clr-forms-focused-color,
+        variables.$clr-use-custom-properties
+      );
     }
 
     &:disabled {
@@ -79,8 +90,8 @@
       );
       @include mixins.css-var(
         border-color,
-        clr-forms-textarea-disabled-border-color,
-        forms-variables.$clr-forms-border-color,
+        clr-forms-border-disabled-color,
+        forms-variables.$clr-forms-border-disabled-color,
         variables.$clr-use-custom-properties
       );
     }
@@ -95,7 +106,7 @@
     );
     @include mixins.css-var(
       outline-color,
-      forms-variables.$clr-forms-valid-color,
+      clr-forms-valid-color,
       forms-variables.$clr-forms-valid-color,
       variables.$clr-use-custom-properties
     );
